Course Subscription Handler Updated

--- a/Conisoft/templates/workshops.html
+++ b/Conisoft/templates/workshops.html
@@ -34,7 +34,7 @@
                                     <h3><a href="#">{{ object.name }}</a></h3>
                                     <p>{{ object.description }}.</p>
                                     <span class="subscribe_button" style="cursor:pointer;"
-                                        data-catid="{{ object.id }}">Attend</span>
+                                        data-catid="{{ object.id }}" data-catname="{{ object.name }}">Attend</span>
                                 </div>
                                 <div class="courses-date">
                                     <div class="courses-author">
@@ -61,15 +61,17 @@
 
     $('.subscribe_button').click(function () {
         console.log('activated')
-        var id
+        var id,name
         id = $(this).attr('data-catid');
+        name = $(this).attr('data-catname');
         console.log(id)
         $.ajax(
             {
                 type: 'GET',
                 url: '/workshops/subscribe',
                 data: {
-                    workshop_id: id
+                    workshop_id: id,
+                    workshop_name: name
                 },
                 success: function (data) {
                     console.log('Workshop' + id + 'Was subscribed to')
