--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -65,7 +65,7 @@
                                                   <span>{{ object.presenter }}</span>
                                              </div>
                                              <div class="courses-price">
-                                                  <a href="/workshops"><span>Attend</span></a>
+                                                  <a href="/workshops"><span>More..</span></a>
                                              </div>
                                         </div>
                                    </div>
