--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -79,7 +79,7 @@
 
 
 <!-- ABOUT -->
-<section id="about">
+<!-- <section id="about">
      <div class="container">
           <div class="row">
                <div class="col-md-12 col-sm-12">
@@ -111,11 +111,11 @@
                </div>
           </div>
      </div>
-</section>
+</section> -->
 
 
 <!-- PREVIOUS EDITIONS -->
-<section id="testimonial">
+<!-- <section id="testimonial">
      <div class="container">
           <div class="row">
                <div class="col-md-12 col-sm-12">
@@ -140,6 +140,6 @@
                     </div>
                </div>
           </div>
-</section>
+</section> -->
 
 {% endblock content %}
