Added workshop search to manage page

--- a/Conisoft/templates/workshops.html
+++ b/Conisoft/templates/workshops.html
@@ -23,12 +23,17 @@
                                 <div class="courses-price">
                                     <h3><a href="#">{{ object.name }}</a></h3>
                                     <p>{{ object.description }}.</p>
-                                    {% if object.id != user.course_1_id and object.id != user.course_2_id %}
-                                    <span class="subscribe_button" style="cursor:pointer;"
-                                        data-catid="{{ object.id }}" data-catname="{{ object.name }}" data-catzoom_link="{{ object.zoom_link }}">Attend</span>
+                                    {% if user.is_authenticated %}
+                                        {% if object.id != user.course_1_id and object.id != user.course_2_id %}
+                                        <span class="subscribe_button" style="cursor:pointer;"
+                                            data-catid="{{ object.id }}" data-catname="{{ object.name }}" data-catzoom_link="{{ object.zoom_link }}">Attend</span>
+                                        {% else %}
+                                        <span class="" style="cursor:pointer;"
+                                            data-catid="{{ object.id }}" data-catname="{{ object.name }}" data-catzoom_link="{{ object.zoom_link }}">Enrolled</span>
+                                        {% endif %}
+
                                     {% else %}
-                                    <span class="" style="cursor:pointer;"
-                                        data-catid="{{ object.id }}" data-catname="{{ object.name }}" data-catzoom_link="{{ object.zoom_link }}">Enrolled</span>
+                                    <a href="/login"><span class="subscribe_button" style="cursor:pointer;">Login to View</span></a>
                                     {% endif %}
                                 </div>
                                 <div class="courses-date">
