--- a/Conisoft/templates/account.html
+++ b/Conisoft/templates/account.html
@@ -13,7 +13,6 @@
 		<button class="btn btn-primary" type="submit">Update</button>
 	</form>
 </div>
-
 <div class="container">
 	<div class="row">
 		<div class="col-md-12 col-sm-12">
@@ -26,7 +25,7 @@
 							<div class="card-body">
 								<a><h3 class="card-title">{{ user.Full_Name }}</h3></a>
 								<a><p class="card-text">{{ user.email }}</p></a>
-								<a><p class="card-text">Workshops: <br><strong>{{ user.course_1_name }} <br>{{ user.course_2_name }}</strong></p></a>
+								<a><p class="card-text">courses: <br><strong>{{ user.course_1_name }} <br>{{ user.course_2_name }}</strong></p></a>
 								<div class="">
 								{% if user.receipt_photo %}
 									<a href='media/{{ user.receipt }}' class="btn btn-primary btn-sm" style="width: 100%; margin-bottom: 5px;" alt="Missing">Receipt Photo</a>
