--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -5,7 +5,6 @@
 
 <head>
      <title>Conisoft 2021</title>
-
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -45,15 +44,15 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         {% if 'register' in request.path or 'login' in request.path or 'workshops' in request.path or 'manage' in request.path or 'receipt' in request.path %}
+                         {% if 'register' in request.path or 'login' in request.path or 'courses' in request.path or 'manage' in request.path or 'receipt' in request.path %}
                               <li><a href="/#home" class="smoothScroll">Home</a></li>
-                              <li class ="{% if request.path == '/workshops' %} active {% endif %}"><a href="/workshops" class="smoothScroll">Workshops</a></li>
+                              <li class ="{% if request.path == '/courses' %} active {% endif %}"><a href="/courses" class="smoothScroll">Courses</a></li>
                               <!-- <li><a href="/#about" class="smoothScroll">Requirments</a></li> -->
                               <!-- <li><a href="/#testimonial" class="smoothScroll">Past Editions</a></li> -->
                               <li><a href="/#footer" class="smoothScroll">Contact</a></li>
                          {% else %}
                               <li class="active"><a href="#home" class="smoothScroll">Home</a></li>
-                              <li><a href="/workshops" class="smoothScroll">Workshops</a></li>
+                              <li><a href="/courses" class="smoothScroll">Courses</a></li>
                               <!-- <li><a href="#about" class="smoothScroll">Requirments</a></li> -->
                               <!-- <li><a href="#testimonial" class="smoothScroll">Past Editions</a></li> -->
                               <li><a href="#footer" class="smoothScroll">Contact</a></li>
@@ -89,7 +88,6 @@
           {% block content %}
           {% endblock content %}
      </main>
-
 
      <!-- FOOTER -->
      <footer id="footer">
