--- a/Conisoft/templates/manage.html
+++ b/Conisoft/templates/manage.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="section-title">
-                <h2>Users / Workshops</h2>
+                <h2>Users / Courses</h2>
                 <form class="add_your_class" method="GET" action="" >
 
                     <label for="name_search">Name</label>
@@ -18,7 +18,7 @@
 
                     <select id="test" class="form-select" aria-label="Default select example" style="width: 19rem; position: relative; left: 2rem;">
                         <option selected value="1">Users</option>
-                        <option value="0">Workshops</option>
+                        <option value="0">Courses</option>
                     </select>
                     
                     <br><br>
@@ -49,7 +49,7 @@
         <div class="row" id="hidden_div">
             <div class="col-md-12 col-sm-12">
                 {% for user in search_results %}
-                {% if not user.taken_slots %}
+                {% if not user.attendants %}
                 <div class="col-md-3 col-sm-3">
                     <div class="item">
                         <div class="courses-thumb">
@@ -57,14 +57,14 @@
                                 <div class="card-body">
                                     <a href="/admin/mainApp/user/{{user.id}}/change/"><h3 class="card-title">{{ user.Full_Name }}</h3></a>
                                     <a href="/admin/mainApp/user/{{user.id}}/change/"><p class="card-text">{{ user.email }}</p></a>
-                                    <a href="/admin/mainApp/user/{{user.id}}/change/"><p class="card-text">Workshops: <br><strong>{{ user.course_1_name }} <br>{{ user.course_2_name }}</strong></p></a>
+                                    <a href="/admin/mainApp/user/{{user.id}}/change/"><p class="card-text">Courses: <br><strong>{{ user.course_1_name }} <br>{{ user.course_2_name }}</strong></p></a>
                                     {% if user.receipt_photo %}
                                         <a href='media/{{ user.receipt_photo }}' class="btn btn-primary" style="width: 100%; margin-bottom: 5px;" alt="Missing">View Receipt</a>
                                     {% else %}
                                         <a href='/admin/mainApp/user/{{user.id}}/change/' class="btn btn-outline-primary" style="width: 100%; margin-bottom: 5px;" alt="Missing">No Receipt</a>
                                     {% endif %}
                                         <br>
-                                    {% if user.is_approved == True %}
+                                    {% if user.approved == True %}
                                         <a href="/admin/mainApp/user/{{user.id}}/change/" class="btn btn-primary" style="width: 100%;">Approved</a>
                                     {% else %}
                                         <a href="/admin/mainApp/user/{{user.id}}/change/" class="btn btn-outline-primary" style="width: 100%;">Not Approved</a>
@@ -86,17 +86,55 @@
         <div class="row">
             <div class="col-md-12 col-sm-12">
                 {% for course in search_results %}
-                {% if course.taken_slots %}
+                {% if course.attendants %}
+
                 <div class="col-md-3 col-sm-3">
+                    <div class="item">
+                        <div class="courses-thumb">
+                            <div class="courses-top">
+
+                                <div class="courses-image">
+                                    <img src="{{ course.image.url }}" class="img-responsive" alt="">
+                                </div>
+
+                                <span style="font-size: 2rem;">{{ course.name }}</span><br>
+
+                                <a href="/admin/mainApp/course/{{course.id}}/change/"><p class="card-text">Attendants: {{ course.attendants }} / {{ course.max_size }}</p></a>
+
+                                <span href="/admin/mainApp/course/{{course.id}}/change/">{{ course.presenter }}</span><br>
+                                <a href="/admin/mainApp/course/{{course.id}}/change/"><p class="card-text">{{ course.email }}</p></a>
+                                <span href="/admin/mainApp/course/{{course.id}}/change/"><i class="fa fa-calendar"></i>{{ course.date }}</span><br>
+                                <span href="/admin/mainApp/course/{{course.id}}/change/"><i class="fa fa-clock-o"></i> {{ course.time_length }} Hours</span><br>
+
+                                {% if course.approved == True %}
+                                    <a href="/admin/mainApp/course/{{course.id}}/change/" class="btn btn-primary" style="width: 100%;">Approved</a>
+                                {% else %}
+                                    <span href="/admin/mainApp/course/{{course.id}}/change/" class="btn btn-outline-primary" style="width: 100%;">Not Approved</span>
+                                {% endif %}
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- <div class="col-md-3 col-sm-3">
                     <div class="item">
                         <div class="courses-thumb">
                             <div class="card" style="width: 100%;">
                                 <div class="card-body">
                                     <a href="/admin/mainApp/course/{{course.id}}/change/"><h3 class="card-title">{{ course.name }}</h3></a>
+                                    <a href="/admin/mainApp/course/{{course.id}}/change/"><p class="card-text">Attendants: {{ course.attendants }} / {{ course.max_size }}</p></a>
                                     <a href="/admin/mainApp/course/{{course.id}}/change/"><p class="card-text">{{ course.email }}</p></a>
-                                    <a href="/admin/mainApp/course/{{course.id}}/change/"><p class="card-text">Attendants: {{ course.taken_slots }}</p></a>
-                                    <br>
-                                    {% if course.is_approved == True %}
+                                    <a href="/admin/mainApp/course/{{course.id}}/change/"><p><i class="fa fa-clock-o"></i> {{ course.time_length }} Hours</p></a>
+                                    
+                                    <div class="courses-author">
+                                        <img src='{{ object.presenter_image.url }}' class="img-responsive" alt="">
+                                        <span>{{ object.presenter }}</span>
+                                    </div>
+                                    <span><i class="fa fa-calendar"></i>{{ course.date }}</span>
+                                    
+                                    {% if course.approved == True %}
                                         <a href="/admin/mainApp/course/{{course.id}}/change/" class="btn btn-primary" style="width: 100%;">Approved</a>
                                     {% else %}
                                         <a href="/admin/mainApp/course/{{course.id}}/change/" class="btn btn-outline-primary" style="width: 100%;">Not Approved</a>
@@ -105,7 +143,7 @@
                             </div>
                         </div>
                     </div>  
-                </div>
+                </div> -->
                 {% endif %}
                 {% empty %}
                     <h1>No Results</h1>
