--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -34,7 +34,7 @@
           <div class="row">
                <div class="col-md-12 col-sm-12">
                     <div class="section-title">
-                         <h2>Courses <small>Upgrade your skills with newest workshops</small></h2><a href ="/courses" class="btn btn-lg btn-primary">View all</a>
+                         <h2>Courses <small>Upgrade your skills with newest workshops</small></h2><a href ="/courses" class="btn btn-lg btn-primary" style=" background-color: #ca2216; border-radius: 0;">View all</a>
                     </div>
                     
                     <div class="owl-carousel owl-theme owl-courses">
